vcluster_versioned_docs/version-0.36.0/configure/vcluster-yaml/control-plane/components/backing-store/etcd/deploy.mdx
---
title: External etcd
sidebar_label: deploy
sidebar_position: 3
description: Configure an external etcd instance as the tenant cluster's backing store.
sidebar_class_name: host-nodes private-nodes
---

import ConfigReference from '../../../../../../_partials/config/controlPlane/backingStore/etcd/deploy.mdx'

import TenancySupport from '../../../../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" privateNodes="true" />

When using this backing store option, [etcd](https://etcd.io/) is deployed on the control plane cluster in the same namespace as the <GlossaryTerm term="vcluster">vCluster</GlossaryTerm> control plane pod. vCluster deploys etcd with a StatefulSet, Service, and headless Service.

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
```

## Customize the resources

You can customize the resources that is deployed for etcd. Here are some basic examples, but more options exist in the configuration.

### Set resource requests for the StatefulSet

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          resources:
            requests:
              cpu: 20m
              memory: 150Mi
```

### Add annotations to each etcd component

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          annotations:
            app.kubernetes.io/part-of: "etcd"
            cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
        service:
          annotations:
            app.kubernetes.io/part-of: "etcd"
        headlessService:
          annotations:
            app.kubernetes.io/part-of: "etcd"
```

### Set the security context of the StatefulSet

```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          security:
            podSecurityContext:
              allowPrivilegeEscalation: false
```

## Back up and restore

vCluster snapshot and restore aren't supported for backing up or restoring a tenant cluster that already runs on deployed etcd. `vcluster snapshot create` isn't blocked and can appear to succeed, but the result isn't validated, so don't rely on it to recover a tenant cluster. The same applies to `vcluster restore` and [scheduled snapshots](../../../../snapshots.mdx).

Deployed etcd is, however, a supported target when migrating an embedded etcd snapshot onto a new tenant cluster. See [Migrate from embedded etcd to a different backing store](../../../../../../manage/backup-restore/restore.mdx#migrate-from-embedded-etcd-to-a-different-backing-store).

To move off this backing store, see [Migration options](#migration-options).

## Migration options

### Migrate to embedded etcd

You can migrate from deployed <GlossaryTerm term="etcd">etcd</GlossaryTerm> to [embedded etcd](/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/etcd/embedded) without data loss. This migration simplifies your deployment and reduces resource consumption.

:::tip Migration guide available
For step-by-step instructions on migrating from deployed to embedded etcd while preserving all your data, see the **[complete migration guide](../../../../../../manage/migrate-etcd-backing-store.mdx)**.
:::

```yaml title="vcluster.yaml"
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
        migrateFromDeployedEtcd: true
```

Deploying with `migrateFromDeployedEtcd: true` retains the external etcd StatefulSet to perform the migration.  After a successful migration, you should see the `Successfully migrated etcd database to embedded etcd` log message in vCluster.
To remove the external etcd after migration, delete `migrateFromDeployedEtcd: true` from the `vcluster.yaml`:

```yaml title="vcluster.yaml after etcd migration"
controlPlane:
  backingStore:
    etcd:
      embedded:
        enabled: true
```

## Config reference

<ConfigReference/>

